# stock-analysis-agent-padanticAI

./: README.md  hello.py  main.py  pyproject.toml
data/: nasdaq_data.json
notebooks/: download_nasdaqlisted.ipynb  get_past_performance.ipynb  get_top_performance_stock.ipynb
src/: agents.py  models.py  schema.py  steps.py  tool_dependencies.py  tools.py  utils.py  utils_code_execution.py  utils_stock.py  validators.py  workflows.py
src/agents/: data_acquisition_agent.py  extraction_agent.py  generate_code_agent.py  search_agent.py
