[project]
name = "stock-analysis-agent-padanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-ai[examples]>=0.1.10",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
