[project]
name = "stock-analysis-agent-padanticai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.25",
    "langchain-deepseek>=0.1.3",
    "langchain-experimental>=0.3.4",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "pydantic-ai[examples]>=0.1.10",
    "python-dotenv>=1.1.0",
    "tabulate>=0.9.0",
    "yfinance>=0.2.59",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]
